--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 mails
 maps
-export.csv
+*.csv
 output*
+couples.txt
 combinations.ipynb
 
 # Created by https://www.gitignore.io/api/osx,macos,python,jupyternotebooks
